Style second edition ( font weight change, name change)

--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
         <h1 class='uptitle'>There Is No Such Thing As 
             <span class=author>Words by Ellen Lupton and Leslie Xia
             Published on May 24th, 2021</span></h1>
-        <h2><span class=firstletter>N</span>
-            <span class=secondletter>e</span>
-            <span class=thirdletter>u</span>
-            <span class=forthletter>t</span>
-            <span class=fifthletter><em>r</em></span>
-            <span class=sixthletter>a</span>
-            <span class=seventhletter><em>l</em></span>
-            <span class=eighthletter>G</span>
-            <span class=ninthletter>r</span>
-            <span class=tenthletter>a</span>
-            <span class=eleventhletter>p</span>
-            <span class=twelfthletter>h</span>
-            <span class=thirteenthletter>i</span>
-            <span class=forteenthletter>c</span> 
-            <span class=fifteenthletter>D</span>
-            <span class=sixteenthletter>e</span>
-            <span class=seventeenthletter>s</span>
-            <span class=eighteenthletter>i</span>
-            <span class=ninteenthletter>g</span>
-            <span class=twentiethletter>n</span></h2>
+        <h2><span span:nth-child(1)>N</span>
+            <span span:nth-child(2)>e</span>
+            <span span:nth-child(3)>u</span>
+            <span span:nth-child(4)>t</span>
+            <span span:nth-child(5)><em>r</em></span>
+            <span span:nth-child(6)>a</span>
+            <span span:nth-child(7)><em>l </em></span>
+            <span span:nth-child(8)>G</span>
+            <span span:nth-child(9)>r</span>
+            <span span:nth-child(10)>a</span>
+            <span span:nth-child(11)>p</span>
+            <span span:nth-child(12)>h</span>
+            <span span:nth-child(13)>i</span>
+            <span span:nth-child(14)>c </span> 
+            <span span:nth-child(15)>D</span>
+            <span span:nth-child(16)>e</span>
+            <span span:nth-child(17)>s</span>
+            <span span:nth-child(18)>i</span>
+            <span span:nth-child(19)>g</span>
+            <span span:nth-child(20)>n</span></h2>
         <section>
             <blockquote>
             What does it mean to design "normal" things to "normal" people?</blockquote>
